updating sonar issues